tests/negative/gold/interface-cycle2-test.gold
tests/negative/interface-cycle2-test.toit:5:11: error: Cycle in interface chain
interface A implements A:
          ^
tests/negative/interface-cycle2-test.toit:5:24: error: This clause contributes to the cycle
interface A implements A:
                       ^
Compilation failed
